📦 ajouter(CategoryController.php) : ajouter un contrôleur pour gérer les catégories 🔀 fusionner(PageController.php) : fusionner les modifications de la variable de titre avec l'objet de catégorie 📝 mettre à jour(index.html.twig) : mettre à jour le template pour afficher le nom de la catégorie 📝 mettre à jour(category.html.twig) : mettre à jour le template pour afficher le nom de la catégorie et ajouter un lien de modification

--- a/templates/page/category.html.twig
+++ b/templates/page/category.html.twig
@@ -1,10 +1,16 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello PageController!{% endblock %}
+{% block title %}
+	{{ category.name }}
+{% endblock %}
 
 {% block body %}
 
-<h1>{{ title }}</h1>
-{{ dump(posts) }}
+	<h1>{{ category.name }}</h1>
+
+	<a href="{{ path('category_edit', {'category': category.name}) }}">
+		Modifier
+	</a>
+	{{ dump(posts) }}
 
 {% endblock %}
