🐛 corriger(CategoryController.php) : ajouter l'importation manquante de la classe Category et de l'interface EntityManagerInterface ✨ fonctionnalité(CategoryController.php) : ajouter une nouvelle route pour ajouter une nouvelle catégorie ✨ fonctionnalité(base.html.twig) : ajouter un lien vers la page d'accueil ✨ fonctionnalité(category/index.html.twig) : ajouter un lien pour revenir à la liste des catégories et un paragraphe pour ajouter un formulaire pour ajouter une nouvelle catégorie ✨ fonctionnalité(category/new.html.twig) : créer un nouveau fichier de modèle pour afficher le formulaire d'ajout d'une nouvelle catégorie ✨ fonctionnalité(page/category.html.twig) : ajouter des liens pour ajouter, modifier et supprimer une catégorie

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,10 @@
         {% endblock %}
     </head>
     <body>
+        <a href={{ path('home') }}>
+            Home
+        </a>
+        <hr>
         {% block body %}{% endblock %}
     </body>
 </html>
