--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,14 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-	{{ category.name }}
+    Nouvelle catégorie
 {% endblock %}
 
 {% block body %}
-	<h1>{{ category.name }}</h1>
-    <a href={{ path('category', {'category': category.name}) }}>
-        Retour
-    </a>
+	<h1>Nouvelle catégorie</h1>
     <p>
         TODO: Add form to add new category
     </p>
