--- a/templates/category/edit.html.twig
+++ b/templates/category/edit.html.twig
@@ -6,7 +6,8 @@
 
 {% block body %}
 	<h1>Modifier la catégorie : {{ category.name }}</h1>
-    
+    <img src="{{ asset('/uploads/') }}{{ category.image }}" width="50">
+    <br>
     {{ form(editForm) }}
     
 {% endblock %}
