--- a/templates/page/category.html.twig
+++ b/templates/page/category.html.twig
@@ -12,14 +12,15 @@
 	<a href={{ path('category_new') }}>Ajouter</a>
 	<a href={{ path('category_edit', {'category': category.name} ) }}>Modifier</a>
 	<a href={{ path('category_edit', {'category': category.name} ) }}>Supprimer</a>
-	
+
 	<hr>
 
 	{% for item in posts %}
+		<img src={{ item.image }} width="300">
 		<h6>{{ item.title }}</h6>
 		<p>{{ item.createdAt|date('d/m/Y') }}</p>
 		{# Cette route est un exemple "home" n'est pas censer rediriger vers post #}
-		<a href={{ path('home', {'id': item.id})}}>Voir</a>
+		<a href={{ path('home', {'id': item.id} )}}>Voir</a>
 		<hr>
 	{% endfor %}
 
