--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,11 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!{% endblock %}
+			{% block title %}Welcome!
+			{% endblock %}
 		</title>
 		<link rel="icon" href="">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Playfair+Display:ital@1&display=swap" rel="stylesheet">
 		{% block stylesheets %}
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 		{% endblock %}
 
 		{% block javascripts %}
@@ -16,11 +21,25 @@
 			{% endblock %}
 		{% endblock %}
 	</head>
-	<body>
-		<a href={{ path('home') }}>
-			Home
-		</a>
-		<hr>
-		{% block body %}{% endblock %}
-	</body>
-</html>
+	<body class="bg-body-secondary">
+		<header class="p-3 text-bg-dark mb-5">
+			<div class="container">
+				<div class="d-flex flex-wrap align-items-center justify-content-between">
+					<h3>
+						<a href={{ path('home') }} class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+							Blog Sf
+						</a>
+					</h3>
+
+					<div class="text-end">
+						<a href="#" class="btn btn-outline-light me-2">Connexion</a>
+						<a href="#" class="btn btn-warning">Inscription</a>
+					</div>
+				</div>
+			</div>
+		</header>
+		<div class="container-fluid pb-5"> 
+			{% block body %}{% endblock %}
+		</div>
+		</body>
+	</html>
