--- a/templates/page/category.html.twig
+++ b/templates/page/category.html.twig
@@ -6,22 +6,29 @@
 
 {% block body %}
 
-	<h1>{{ category.name }}</h1>
+	<div class="d-flex gap-2 justify-content-center py-3">
+		<h1>{{ category.name }}</h1>
+	</div>
+	<div class="d-flex gap-2 justify-content-center pb-3">
+		<a href={{ path('category_new') }} class="btn btn-sm btn-primary">Ajouter</a>
+		<a href={{ path('category_edit', {'category': category.name} ) }} class="btn btn-sm btn-dark">Modifier</a>
+		<a href={{ path('category_edit', {'category': category.name} ) }} class="btn btn-sm btn-danger">Supprimer</a>
+	</div>
 
+	<div class="row gap-3 justify-content-center">
+		{% for item in posts %}
+			<div class="col-sm-3 bg-light rounded-4 p-3 shadow-sm">
+				<img src={{ item.image }} class="img-fluid rounded-3">
+				<h5 class="border-bottom p-3">{{ item.title }}</h5>
+				<p>Publié le
+					{{ item.createdAt|date("j F Y", "Europe/Paris") }}</p>
+				{# Cette route est un exemple "home" n'est pas censer rediriger vers post #}
+				<a href={{ path('home', {'id': item.id} )}} class="btn btn-dark">
+					Voir
+				</a>
 
-	<a href={{ path('category_new') }}>Ajouter</a>
-	<a href={{ path('category_edit', {'category': category.name} ) }}>Modifier</a>
-	<a href={{ path('category_edit', {'category': category.name} ) }}>Supprimer</a>
-
-	<hr>
-
-	{% for item in posts %}
-		<img src={{ item.image }} width="300">
-		<h6>{{ item.title }}</h6>
-		<p>{{ item.createdAt|date('d/m/Y') }}</p>
-		{# Cette route est un exemple "home" n'est pas censer rediriger vers post #}
-		<a href={{ path('home', {'id': item.id} )}}>Voir</a>
-		<hr>
-	{% endfor %}
+			</div>
+		{% endfor %}
+	</div>
 
 {% endblock %}
