--- a/templates/post/edit.html.twig
+++ b/templates/post/edit.html.twig
@@ -3,8 +3,9 @@
 {% block title %}Hello PostController!{% endblock %}
 
 {% block body %}
-    <h1>Modifier le posts</h1>
+    <h1>Modifier le post {{ post.titile}}</h1>
 
-    {{ form.}}
-
+    <div>
+        {{ form(editedForm) }}
+    </div>
 {% endblock %}
