Mise en place de la card

--- a/templates/post/show.html.twig
+++ b/templates/post/show.html.twig
@@ -3,6 +3,15 @@
 {% block title %}Hello PostController!{% endblock %}
 
 {% block body %}
-    <h1>Modifier la catégorie</h1>
+    <h1{{ post.title }}</h1>
+
+    <div class="card" style="width: 18rem;">
+        <img src= {{ item.image }} class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">{{ post.title }}</h5>
+            <p class="card-text">{{ post.content }}</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
 
 {% endblock %}
